--- a/Langwitch/public/css/login.css
+++ b/Langwitch/public/css/login.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Nunito", sans-serif;
+    user-select: none;
 }
 
 *::-webkit-scrollbar {
@@ -10,7 +14,8 @@
 }
 
 .container,
-.middle {
+.middle,
+.middle > div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,28 +32,61 @@
 
 .middle {
     padding: 30px;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.3);
     border-radius: 30px;
-    gap: 10px;
+    gap: 20px;
     flex-direction: column;
+    backdrop-filter: blur(5px);
 }
 
 .middle-title {
     font-size: 20pt;
-    font-weight: bold;
+    font-weight: 900;
+}
+
+.middle > div {
+    position: relative;
+    justify-content: left;
+}
+
+.middle > div > svg {
+    height: 35px;
+    width: 35px;
+    position: absolute;
+    fill: #342265;
+    margin-left: 5px;
+    opacity: 0.5;
+}
+
+.middle > div > input {
+    appearance: none;
+    height: auto;
+    width: 400px;
+    background: none;
+    font-size: 15pt;
+    border: none;
+    border-bottom: 1px solid #000000;
+    outline: none;
+    padding: 10px 10px 10px 50px;
+}
+
+.middle > div > input::placeholder {
+    color: #060934;
 }
 
 .middle-button {
-    height: 60px;
-    width: 480px;
+    height: 50px;
+    width: 400px;
     border-radius: 50px;
     background: #342265;
     color: #ffffff;
     font-size: 15pt;
     font-weight: bold;
+    margin-top: 20px;
 }
 
 .middle-question > a {
     cursor: pointer;
+    color: #342265;
     text-decoration: underline;
 }
