--- a/Langwitch/public/css/login.css
+++ b/Langwitch/public/css/login.css
@@ -30,62 +30,79 @@
     width: 100vw;
 }
 
+.container > img {
+    height: 85px;
+    width: 85px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
 .middle {
-    padding: 30px;
+    padding: 80px;
     background: rgba(255, 255, 255, 0.3);
     border-radius: 30px;
     gap: 20px;
     flex-direction: column;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(3px);
 }
 
 .middle-title {
     font-size: 20pt;
     font-weight: 900;
+    margin-bottom: 20px;
 }
 
-.middle > div {
-    position: relative;
+.middle > div:not(:last-child) {
     justify-content: left;
-}
-
-.middle > div > svg {
-    height: 35px;
-    width: 35px;
-    position: absolute;
-    fill: #342265;
-    margin-left: 5px;
-    opacity: 0.5;
+    align-items: center;
+    border-bottom: 1px solid #000000;
+    width: 350px;
 }
 
 .middle > div > input {
     appearance: none;
     height: auto;
-    width: 400px;
+    width: 100%;
     background: none;
-    font-size: 15pt;
+    font-size: 12pt;
     border: none;
-    border-bottom: 1px solid #000000;
     outline: none;
-    padding: 10px 10px 10px 50px;
+    padding: 10px;
 }
 
 .middle > div > input::placeholder {
     color: #060934;
 }
 
+.input-icon {
+    height: 30px;
+    width: 30px;
+    opacity: 0.5;
+    margin-left: 5px;
+}
+
+.hide-password {
+    height: 30px;
+    width: 30px;
+    opacity: 0.4;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
 .middle-button {
     height: 50px;
-    width: 400px;
+    width: 350px;
     border-radius: 50px;
     background: #342265;
     color: #ffffff;
     font-size: 15pt;
     font-weight: bold;
     margin-top: 20px;
+    cursor: pointer;
 }
 
-.middle-question > a {
+.middle-question > span > a {
     cursor: pointer;
     color: #342265;
     text-decoration: underline;
