--- a/Langwitch/public/css/sidebar.css
+++ b/Langwitch/public/css/sidebar.css
@@ -45,14 +45,12 @@ body {
     height: 100%;
     z-index: 2;
     align-items: center;
-    position: relative;
     box-shadow: 0 1px 1px rgba(28, 28, 28, 0.064),
         0 2px 2px rgba(28, 28, 28, 0.064),
         0 4px 4px rgba(28, 28, 28, 0.064),
         0 8px 8px rgba(28, 28, 28, 0.064),
         0 16px 16px rgba(28, 28, 28, 0.064),
         0 32px 32px rgba(28, 28, 28, 0.064);
-    /* z-index: 5; */
 }
 
 .sidebar.active {
@@ -195,19 +193,16 @@ body {
     transition: 1000ms;
 }
 
-
 .container-content-bg {
     display: flex;
-    transform: scale(0);
-    width: 250vw;
-    height: 250vw;
+    width: 100%;
+    height: 100%;
     transition: 1000ms ease-in-out;
-    background-color: var(--dark-bg);
-    flex: 0 0 auto;
-
+    background-color: var(--white-bg);
+    padding: 88px 102px 30px 30px;
 }
 
 .container-content-bg.active {
-    transform: scale(1);
-    transition: 1000ms ease-in-out;
+    background-color: var(--dark-bg);
+    transition: 800ms ease-in-out;
 }
