--- a/Langwitch/public/css/courseheader.css
+++ b/Langwitch/public/css/courseheader.css
@@ -28,3 +28,11 @@
     justify-content: center;
     display: flex;
 }
+
+.video-title-for-vids-course {
+    font-size: 24px;
+    font-weight: 600;
+    color: #FFF;
+    justify-content: center;
+    display: flex;
+}
