--- a/Langwitch/public/css/sidebar.css
+++ b/Langwitch/public/css/sidebar.css
@@ -1,18 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-    --white-side-bg: #FFFFFF;
-    --white-bg: #FFF;
+    --white-side-bg: #ffffff;
+    --white-bg: #fff;
     --dark-side-bg: #251945;
-    --dark-bg: #1D1533;
+    --dark-bg: #1d1533;
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Nunito', sans-serif;
-
+    font-family: "Nunito", sans-serif;
 }
 
 body {
@@ -25,12 +23,11 @@ body {
     height: 100%;
     width: 100%;
     flex-direction: row;
-
 }
 
-.sidebar-top {
+/* .sidebar-top {
     padding-right: 125;
-}
+} */
 
 .sidebar {
     background: var(--white-bg);
@@ -43,10 +40,8 @@ body {
     z-index: 2;
     align-items: center;
     box-shadow: 0 1px 1px rgba(28, 28, 28, 0.064),
-        0 2px 2px rgba(28, 28, 28, 0.064),
-        0 4px 4px rgba(28, 28, 28, 0.064),
-        0 8px 8px rgba(28, 28, 28, 0.064),
-        0 16px 16px rgba(28, 28, 28, 0.064),
+        0 2px 2px rgba(28, 28, 28, 0.064), 0 4px 4px rgba(28, 28, 28, 0.064),
+        0 8px 8px rgba(28, 28, 28, 0.064), 0 16px 16px rgba(28, 28, 28, 0.064),
         0 32px 32px rgba(28, 28, 28, 0.064);
 }
 
@@ -54,13 +49,10 @@ body {
     background: var(--dark-side-bg);
     transition: 1000ms ease-in-out;
     box-shadow: 0 1px 1px rgba(28, 28, 28, 0.064),
-        0 2px 2px rgba(28, 28, 28, 0.064),
-        0 4px 4px rgba(28, 28, 28, 0.064),
-        0 8px 8px rgba(28, 28, 28, 0.064),
-        0 16px 16px rgba(28, 28, 28, 0.064),
+        0 2px 2px rgba(28, 28, 28, 0.064), 0 4px 4px rgba(28, 28, 28, 0.064),
+        0 8px 8px rgba(28, 28, 28, 0.064), 0 16px 16px rgba(28, 28, 28, 0.064),
         0 32px 32px rgba(28, 28, 28, 0.064);
 }
-
 
 .image-logo-sidebar {
     width: 79px;
@@ -100,7 +92,6 @@ body {
     width: 260px;
 }
 
-
 .list-sidebar ul li a {
     text-decoration: none;
     align-items: center;
@@ -113,12 +104,12 @@ body {
 
 .list-sidebar.active ul li:hover {
     transition: 100ms ease-in-out;
-    border-color: #FFF;
+    border-color: #fff;
 }
 
 .active a p {
     transition: 1000ms ease-in-out;
-    color: #FFF;
+    color: #fff;
 }
 
 .list-sidebar ul li a img {
@@ -130,7 +121,7 @@ body {
 }
 
 .list-sidebar ul li:hover {
-    border-color: #9167E3;
+    border-color: #9167e3;
     border-style: solid;
     border-radius: 50px;
     border-width: 3px;
@@ -138,9 +129,8 @@ body {
     width: 260px;
 }
 
-
 .exit-sidebar li:hover {
-    border-color: #9167E3;
+    border-color: #9167e3;
     border-style: solid;
     border-radius: 50px;
     height: 64px;
