--- a/Langwitch/public/css/login_register.css
+++ b/Langwitch/public/css/login_register.css
@@ -77,6 +77,19 @@
     padding: 10px;
 }
 
+.middle > div > input::selection {
+    color: black;
+    background-color: white;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: rgba(6, 9, 52, 0.65) !important;
+}
+
 .middle > div > input::placeholder {
     color: #060934;
 }
