--- a/Langwitch/public/css/videocourse.css
+++ b/Langwitch/public/css/videocourse.css
@@ -5,4 +5,30 @@
     align-items: center;
     display: flex;
     height: 80vh;
+    border-radius: 30px;
+    overflow: hidden;
+    width: 880px;
+    height: 480px;
+}
+
+.video-styler {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 80vh;
+}
+
+.button-next-prev {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    background-color: #342265;
+    width: 87px;
+    height: 87px;
+    border-radius: 50%;
+    cursor: pointer;
 }
