--- a/Langwitch/public/css/review.css
+++ b/Langwitch/public/css/review.css
@@ -27,7 +27,7 @@
 
 .level-stats {
     background-color: #FE5C74;
-    width: 660px;
+    width: 75%;
     height: 146px;
     border-radius: 30px;
     align-items: center;
