--- a/Langwitch/public/css/home.css
+++ b/Langwitch/public/css/home.css
@@ -1,11 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
     padding: 0;
     margin: 0;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
 .home {
+    position: relative;
+    top: 200px;
+    padding-bottom: 100px;
     background-color: #fff;
     justify-content: center;
     gap: 10px;
@@ -24,7 +31,7 @@
 }
 
 .text-home {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-weight: 500;
     font-size: 24px;
     color: #060934;
@@ -34,7 +41,7 @@
 }
 
 .home-button-top {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-weight: 700;
     font-size: 24px;
     padding: 11px 34px 11px 34px;
@@ -61,7 +68,7 @@
 
 .title-home-2 {
     height: 130px;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 48px;
     line-height: 65px;
     font-weight: 800;
@@ -69,7 +76,7 @@
 }
 
 .text-home-2 {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 18px;
     font-weight: 500;
     height: 176px;
@@ -94,7 +101,7 @@
 
 .title-home-3 {
     height: 130px;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 48px;
     line-height: 65px;
     font-weight: 800;
@@ -102,7 +109,7 @@
 }
 
 .text-home-3 {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 18px;
     font-weight: 500;
     height: 176px;
@@ -128,7 +135,7 @@
 
 .title-home-4 {
     height: 130px;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 48px;
     line-height: 65px;
     font-weight: 800;
@@ -136,7 +143,7 @@
 }
 
 .text-home-4 {
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 18px;
     font-weight: 500;
     height: 176px;
