--- a/Langwitch/public/css/navbar.css
+++ b/Langwitch/public/css/navbar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
 * {
     padding: 0;
@@ -6,19 +6,18 @@
 }
 
 .nav {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     justify-content: space-between;
     display: flex;
     padding: 0 10%;
     height: 120px;
     box-shadow: 0 1px 1px rgba(28, 28, 28, 0.064),
-        0 2px 2px rgba(28, 28, 28, 0.064),
-        0 4px 4px rgba(28, 28, 28, 0.064),
-        0 8px 8px rgba(28, 28, 28, 0.064),
-        0 16px 16px rgba(28, 28, 28, 0.064),
+        0 2px 2px rgba(28, 28, 28, 0.064), 0 4px 4px rgba(28, 28, 28, 0.064),
+        0 8px 8px rgba(28, 28, 28, 0.064), 0 16px 16px rgba(28, 28, 28, 0.064),
         0 32px 32px rgba(28, 28, 28, 0.064);
     z-index: 3;
-    position: relative;
+    position: fixed;
+    width: 80%;
 }
 
 .image-logo {
@@ -28,7 +27,6 @@
     width: 79px;
 }
 
-
 .button-login {
     display: flex;
     align-items: center;
@@ -36,11 +34,11 @@
 }
 
 .login-text {
-    Padding: 11px 34px 11px 34px;
+    padding: 11px 34px 11px 34px;
     border-radius: 100px;
     background: #342265;
-    font-family: 'Nunito', sans-serif;
-    color: #FFFFFF;
+    font-family: "Nunito", sans-serif;
+    color: #ffffff;
     text-decoration: none;
     font-weight: 700;
 }
