--- a/Langwitch/public/css/discussion.css
+++ b/Langwitch/public/css/discussion.css
@@ -77,8 +77,8 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    margin: 0 -10px 50px -10px;
-    padding: 30px 0;
+    margin: 20px -10px 70px -10px;
+    padding: 10px 0 10px 0;
     overflow-y: scroll;
 }
 
