update 2024 DARK MODE HTML CSS JS

--- a/Langwitch/public/css/review.css
+++ b/Langwitch/public/css/review.css
@@ -56,7 +56,7 @@
 
 .exp-stats {
     display: flex;
-    background-color: #EBE0FF;
+    background: linear-gradient(316deg, #ac82ff, transparent);
     width: 263px;
     height: 146px;
     border-radius: 30px;
