--- a/Langwitch/public/css/homecourse.css
+++ b/Langwitch/public/css/homecourse.css
@@ -1,9 +1,3 @@
-.level-per-level {
-    width: 80%;
-    /* display: flex;
-    flex-direction: row; */
-}
-
 .only-container {
     text-align: center;
 }
@@ -23,6 +17,10 @@
     margin-top: 38px;
 }
 
+.study-page {
+    height: 785px;
+}
+
 .review-button-modifier {
     color: #060934;
     font-size: 24px;
@@ -35,6 +33,7 @@
 }
 
 .level-and-button {
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -82,51 +81,97 @@
 }
 
 .level-per-level {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    height: 100%;
+    width: 80%;
+    display: block;
+    position: relative;
+    overflow-y: scroll;
+    margin-bottom: 100px;
+}
+
+.level-per-level::-webkit-scrollbar {
+    display: none;
 }
 
 .blobby1 {
-    grid-area: 1 / 1 / 2 / 2;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .blobby2 {
-    grid-area: 2 / 2 / 3 / 3;
+    position: absolute;
+    top: 150px;
+    left: 200px;
 }
 
 .blobby3 {
-    grid-area: 3 / 3 / 4 / 4;
+    position: absolute;
+    top: 240px;
+    left: 420px;
 }
 
 .blobby4 {
-    grid-area: 3 / 4 / 4 / 5;
+    position: absolute;
+    top: 190px;
+    left: 670px;
 }
 
 .blobby5 {
-    grid-area: 4 / 5 / 5 / 6;
+    position: absolute;
+    top: 300px;
+    left: 870px;
 }
 
 .blobby6 {
-    grid-area: 5 / 4 / 6 / 5;
+    position: absolute;
+    top: 450px;
+    left: 710px;
 }
 
 .blobby7 {
-    grid-area: 4 / 3 / 5 / 4;
+    position: absolute;
+    top: 530px;
+    left: 450px;
 }
 
 .blobby8 {
-    grid-area: 5 / 2 / 6 / 3;
+    position: absolute;
+    top: 470px;
+    left: 200px;
 }
 
 .blobby9 {
-    grid-area: 7 / 3 / 8 / 4;
+    position: absolute;
+    top: 620px;
+    left: 0;
+}
+
+.checkpoint01 {
+    background-image: url(../images/Banner.svg);
+    background-size: contain;
+    height: 97px;
+    width: 97px;
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.checkpoint02 {
+    background-image: url(../images/Flag.svg);
+    background-size: contain;
+    height: 53px;
+    width: 53px;
+    position: absolute;
+    top: 5px;
+    left: calc(50% + 15px);
+    transform: translateX(-50%);
 }
 
 .locked {
     filter: grayscale(1);
+    pointer-events: none;
 }
 
 .locked > img {
